@@ -25,12 +25,16 @@ tasks.withType(JavaCompile) {
 }
 
 application {
-    mainModule = 'com.jpasikainen.tira'
     mainClass = 'com.jpasikainen.tira.Game'
+    applicationDefaultJvmArgs = [
+            "--module-path=/usr/share/java/lib",
+            "--add-modules=javafx.controls,javafx.fxml"]
 }
 
+mainClassName = '$moduleName/com.jpasikainen.tira.Game'
+
 javafx {
-    version = '11.0.2'
+    version = '17'
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
@@ -57,6 +61,19 @@ jacocoTestReport {
 checkstyle {
     ignoreFailures = true
     checkstyleMain.source = "src"
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.jpasikainen.tira.Game'
+        )
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA', 'META-INF/*.MF'
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
 checkstyleMain.exclude('main/java/com/jpasikainen/tira/gui/*.java')
